# uart_checker

./: .gitignore  README.md  RUST_USB_IMPLEMENTATION_PROGRESS.md  package-lock.json  package.json  pubspec.yaml  test_websocket_client.js  调试日志.txt
Release/Linux/bundle/: uart_checker
Release/Linux/bundle/data/flutter_assets/: NOTICES.Z  version.json
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/uart_checker/: MainActivity.kt
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart  usb_capture_rust.dart  usb_detector_real.dart  usb_packet_native.dart  usb_packet_tab.dart  usb_packet_tab_real.dart  usb_packet_tab_rust.dart  websocket_api.md  websocket_control_page.dart  websocket_panel.dart  websocket_server.dart  websocket_test_client.html
linux/: CMakeLists.txt
linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
rust_usb_capture/: Cargo.toml
rust_usb_capture/src/: lib.rs
test/: websocket_manual_test.dart  websocket_test.dart  widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
