[package]
name = "usb_capture"
version = "0.1.0"
edition = "2021"

[lib]
name = "usb_capture"
crate-type = ["cdylib"]

[dependencies]
rusb = "0.9"
libc = "0.2"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.19"

[dependencies.uuid]
version = "1.0"
features = ["v4"]

[profile.release]
opt-level = 3
lto = true
strip = true